--- a/app/templates/recipe_form.html
+++ b/app/templates/recipe_form.html
@@ -26,7 +26,8 @@
       <label>Image path (optional)</label><br />
       <input name="image_path" /><br /><br />
 
-      <button type="submit">Save</button>
+      <p>Add ingredients press continue</p>
+      <button type="submit">Continue</button>
     </form>
 
     <br />
