--- a/app/templates/recipes_scaled_preview.html
+++ b/app/templates/recipes_scaled_preview.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="/static/style.css" />
     <title>Scaled recipes preview</title>
   </head>
   <body>
-    <h1>Scaled recipes (preview)</h1>
+    <h1>{{ labels.preview_title }}</h1>
     <p>Target energy by category:</p>
     <ul>
       <li>Breakfast: {{ targets_by_category.breakfast }} kJ</li>
@@ -24,6 +25,7 @@
         name="target_kj_breakfast"
         value="{{ targets_by_category.breakfast }}"
       />
+      <input type="hidden" name="lang" value="{{ lang }}" />
       <input type="hidden" name="client_name" value="{{ client_name }}" />
       <input
         type="hidden"
@@ -44,7 +46,7 @@
       {% for r in scaled_recipes %}
       <hr />
       <h2>{{ r.recipe.name }}</h2>
-      <p><strong>Category:</strong> {{ r.category | capitalize }}</p>
+      <p><strong>{{ labels.category }}:</strong> {{ r.category | capitalize }}</p>
       <input type="hidden" name="recipe_ids" value="{{ r.recipe_id }}" />
 
       <ul>
@@ -69,11 +71,11 @@
       </ul>
 
       <p>
-        Energy: {{ r.nutrients.energy_kj | round(0) }} kJ<br />
-        Protein: {{ r.nutrients.protein_g | round(1) }} g<br />
-        Carbs: {{ r.nutrients.carbs_g | round(1) }} g<br />
-        Fat: {{ r.nutrients.fat_g | round(1) }} g<br />
-        Fibre: {{ r.nutrients.fibre_g | round(1) }} g
+        {{ labels.energy }}: {{ r.nutrients.energy_kj | round(0) }} kJ<br />
+        {{ labels.protein }}: {{ r.nutrients.protein_g | round(1) }} g<br />
+        {{ labels.carbs }}: {{ r.nutrients.carbs_g | round(1) }} g<br />
+        {{ labels.fat }}: {{ r.nutrients.fat_g | round(1) }} g<br />
+        {{ labels.fibre }}: {{ r.nutrients.fibre_g | round(1) }} g
       </p>
       {% endfor %}
 
@@ -86,6 +88,7 @@
         name="target_kj_breakfast"
         value="{{ targets_by_category.breakfast }}"
       />
+      <input type="hidden" name="lang" value="{{ lang }}" />
       <input type="hidden" name="client_name" value="{{ client_name }}" />
       <input
         type="hidden"
