--- a/app/templates/recipe_form.html
+++ b/app/templates/recipe_form.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="/static/style.css" />
     <title>Add recipe</title>
   </head>
   <body>
