--- a/app/templates/ingredients_list.html
+++ b/app/templates/ingredients_list.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="/static/style.css" />
-    <title>Ingredients</title>
-  </head>
-  <body>
+{% extends "base.html" %}
+{% block title %}Ingredients{% endblock %}
+{% block content %}
     <h1>Ingredients</h1>
 
     <p>
@@ -14,10 +9,13 @@
 
     <ul>
       {% for ingredient in ingredients %}
-      <li>{{ ingredient }}</li>
+      <li>
+        <a href="/ingredients/{{ ingredient[0] }}">
+          {{ ingredient[1] }}
+        </a>
+      </li>
       {% endfor %}
     </ul>
 
     <a href="/">Back</a>
-  </body>
-</html>
+{% endblock %}
