--- a/app/templates/recipe_form.html
+++ b/app/templates/recipe_form.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="/static/style.css" />
-    <title>Add recipe</title>
-  </head>
-  <body>
+{% extends "base.html" %}
+{% block title %}Add recipe{% endblock %}
+{% block content %}
     <h1>Add recipe</h1>
 
     <form method="post">
@@ -33,5 +28,4 @@
 
     <br />
     <a href="/recipes">Cancel</a>
-  </body>
-</html>
+{% endblock %}
